srv/netbox/Service.yaml
# _http._tcp.netbox.dafault.svc.cluster.local
apiVersion: v1
kind: Service
metadata:
  labels:
    app: netbox
  name: netbox
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: netbox
