srv/netbox/Ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: netbox
spec:
  tls:
    - hosts:
        - netbox.sj.ifsc.edu.br
      secretName: tls-ifsc-sje
  rules:
    - host: netbox.sj.ifsc.edu.br
      http:
        paths:
          - path: /
            backend:
              serviceName: netbox
              servicePort: 80
